...
    <string name="app_logo_label">App logo</string>
    <string name="login_label">Login</string>
    <string name="logout_label">Logout</string>
    <string name="account_label">Account</string>
    <string name="create_account_label">Create account</string>
    <string name="already_have_account_label">Already hava an account?</string>
    <string name="home_label">Home</string>
    <string name="insights_label">Insights</string>
    <string name="financial_label">Financial</string>
    <string name="stock_label">Stock</string>
    <string name="sales_label">Sales</string>
    <string name="orders_label">Orders</string>
    <string name="products_label">Products</string>
    <string name="product_label">Product</string>
    <string name="catalog_label">Catalog</string>
    <string name="deliveries_label">Deliveries</string>
    <string name="drawer_menu_label">Drawer Menu</string>
    <string name="add_label">Add</string>
    <string name="done_label">Done</string>
    <string name="info_label">Info</string>
    <string name="expand_item_label">Expand item</string>
    <string name="up_button_label">Up button</string>
    <string name="profile_picture">Profile picture</string>
    <string name="product_image_label">Product image</string>
    <string name="category_image_label">Category image</string>
    <string name="categories_label">Categories</string>
    <string name="analytics_label">Analytics</string>
    <string name="analytics_image_label">Analytics image</string>
...
    <string name="enter_age_label">Enter age</string>
    <string name="ok_label">OK</string>
    <string name="cancel_label">Cancel</string>
    <string name="category_label">Category</string>
    <string name="new_category_label">New category</string>
    <string name="more_options_label">More options</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="all_products_label">All the products</string>
    <string name="add_to_catalog_label">Add to catalog</string>
    <string name="save_categories_label">Save categories</string>
    <string name="amazon_label">Amazon</string>
    <string name="amazon_code_label">Amazon code</string>
...
    <string name="orders_list_label">Orders List</string>
    <string name="customers_label">Customers</string>
    <string name="customer_label">Customer</string>
    <string name="new_customer_label">New Customer</string>
    <string name="edit_customer_label">Edit Customer</string>
    <string name="customer_photo_label">Customer photo</string>
    <string name="canceled_sales_label">Canceled Sales</string>
    <string name="delivery_label">Delivery</string>
    <string name="all_deliveries_label">All deliveries</string>
    <string name="not_delivered_label">Not delivered</string>
    <string name="delivered_label">Delivered</string>
    <string name="email_label">Email</string>
    <string name="address_label">Address</string>
...
    <string name="hide_label">Hide</string>
    <string name="dots_label">\u25CF\u25CF\u25CF\u25CF</string>
    <string name="customer_tag">Customer: %s</string>
    <string name="date_of_shopping_tag">Date of shopping, %s.</string>
    <string name="date_of_sale_tag">Date of sale, %s.</string>
    <string name="sales_options_label">Sales Options</string>
    <string name="charts_label">Charts</string>
    <string name="financial_info_label">Financial Info</string>
    <string name="customers_debit_label">Customers Debit</string>
    <string name="stock_debits_label">Stock Debits</string>
    <string name="last_sales_label">Last Sales</string>
    <string name="last_7_days_label">Last 7 days</string>
    <string name="last_21_days_label">Last 21 days</string>
    <string name="last_31_days_label">Last 31 days</string>
    <string name="stock_vs_orders_label">Stock vs Orders</string>
    <string name="company_sales_label">Sales by Company</string>
    <string name="avon_company_label">Avon</string>
    <string name="natura_company_label">Natura</string>
    <string name="boticario_company_label">O Boticário</string>
    <string name="eudora_company_label">Eudora</string>
    <string name="berenice_company_label">Quem disse Berenice?</string>
    <string name="oui_company_label">O.U.I</string>
...
