...
            }
        }
    ) {
        LazyColumn(
            modifier =
                Modifier
                    .semantics { contentDescription = "List of items" }
                    .padding(it),
            contentPadding = PaddingValues(8.dp, vertical = 4.dp)
        ) {
            items(categories) { category ->
                SimpleItemList(
                    modifier = Modifier.padding(vertical = 4.dp),
...
