...
                FinancialInnerScreen.StockDebits,
                FinancialInnerScreen.CanceledSales
            )
        Column(
            modifier =
                Modifier
                    .semantics { contentDescription = "Financial items" }
                    .padding(it)
                    .padding(horizontal = 8.dp, vertical = 4.dp)
                    .verticalScroll(rememberScrollState())
        ) {
            items.forEach { screen ->
                SimpleItemList(
...
