...
            )
        }
    ) {
        LazyColumn(
            modifier =
                Modifier
                    .semantics { contentDescription = "List of debits" }
                    .padding(it),
            contentPadding = PaddingValues(horizontal = 8.dp, vertical = 4.dp)
        ) {
            items(items = debits, key = { item -> item.saleId }) { item ->
                with(sharedTransitionScope) {
                    ElevatedCard(
...
