...
                            )
                        }
                    }
                }

                LazyRow(
                    modifier = Modifier.semantics { contentDescription = "Options" },
                    contentPadding = PaddingValues(vertical = 16.dp, horizontal = 4.dp)
                ) {
                    items(items = options, key = { option -> option.resourceId }) { option ->
                        val description = stringResource(id = option.resourceId)

                        CircularItemList(
...
                    }
                }

                ElevatedCard(
                    modifier =
                        Modifier
                            .semantics { contentDescription = "List of sales" }
                            .padding(start = 16.dp, end = 16.dp, top = 16.dp)
                ) {
                    infoSaleList.forEach { info ->
                        if (info.first.value == 0F) {
                            InfoItemList(
                                modifier = Modifier.padding(horizontal = 16.dp),
...
